// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders customer details when data is loaded 1`] = `
<div>
  <div
    class="flex items-center gap-3 mb-4 pb-4 border-b border-gray-200 dark:border-slate-800"
  >
    <div
      class="w-10 h-10 rounded-md bg-primary-600 flex items-center justify-center"
    >
      <svg
        class="text-white"
        fill="none"
        height="20"
        icon=""
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          width="20"
          x="2"
          y="5"
        />
        <line
          x1="2"
          x2="22"
          y1="10"
          y2="10"
        />
      </svg>
    </div>
    <h2
      class="text-lg font-semibold text-gray-900 dark:text-gray-100 m-0 flex-1"
    >
      Billing Addresses
    </h2>
    <span
      badge=""
      class="inline-flex items-center justify-center min-w-[1.5rem] h-6 px-2 text-xs font-medium text-white bg-primary-600 rounded-full"
    >
      1
    </span>
  </div>
  <div
    class="grid grid-cols-1 md:grid-cols-[repeat(auto-fill,minmax(280px,1fr))] gap-4"
  >
    <div
      class="bg-white dark:bg-slate-900 border border-gray-200 dark:border-slate-800 rounded-md p-4"
    >
      <div
        class="flex justify-between items-start gap-3 py-2 border-b border-gray-100 dark:border-slate-800"
      >
        <span
          class="text-xs font-medium text-gray-600 dark:text-gray-400 uppercase tracking-wider"
        >
           Street 
        </span>
        <span
          class="text-sm font-medium text-gray-900 dark:text-gray-100 text-right"
        >
          123 Billing St
        </span>
      </div>
      <div
        class="flex justify-between items-start gap-3 py-2 border-b border-gray-100 dark:border-slate-800"
      >
        <span
          class="text-xs font-medium text-gray-600 dark:text-gray-400 uppercase tracking-wider"
        >
           City 
        </span>
        <span
          class="text-sm font-medium text-gray-900 dark:text-gray-100 text-right"
        >
          Bill City
        </span>
      </div>
      <div
        class="flex justify-between items-start gap-3 py-2"
      >
        <span
          class="text-xs font-medium text-gray-600 dark:text-gray-400 uppercase tracking-wider"
        >
           Zip Code 
        </span>
        <span
          class="text-sm font-medium text-gray-900 dark:text-gray-100 text-right"
        >
          12345
        </span>
      </div>
    </div>
    <!--container-->
  </div>
</div>
`;

exports[`renders customer details when data is loaded 2`] = `
<div>
  <div
    class="flex items-center gap-3 mb-4 pb-4 border-b border-gray-200 dark:border-slate-800"
  >
    <div
      class="w-10 h-10 rounded-md bg-primary-600 flex items-center justify-center"
    >
      <svg
        class="text-white"
        fill="none"
        height="20"
        icon=""
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 3h5v5M4 20L21 3M21 16v5h-5M15 15l6 6M4 4l5 5"
        />
      </svg>
    </div>
    <h2
      class="text-lg font-semibold text-gray-900 dark:text-gray-100 m-0 flex-1"
    >
      Shipping Addresses
    </h2>
    <span
      badge=""
      class="inline-flex items-center justify-center min-w-[1.5rem] h-6 px-2 text-xs font-medium text-white bg-primary-600 rounded-full"
    >
      2
    </span>
  </div>
  <div
    class="grid grid-cols-1 md:grid-cols-[repeat(auto-fill,minmax(280px,1fr))] gap-4"
  >
    <div
      class="bg-white dark:bg-slate-900 border border-gray-200 dark:border-slate-800 rounded-md p-4"
    >
      <div
        class="flex justify-between items-start gap-3 py-2 border-b border-gray-100 dark:border-slate-800"
      >
        <span
          class="text-xs font-medium text-gray-600 dark:text-gray-400 uppercase tracking-wider"
        >
           Street 
        </span>
        <span
          class="text-sm font-medium text-gray-900 dark:text-gray-100 text-right"
        >
          456 Shipping Ave
        </span>
      </div>
      <div
        class="flex justify-between items-start gap-3 py-2 border-b border-gray-100 dark:border-slate-800"
      >
        <span
          class="text-xs font-medium text-gray-600 dark:text-gray-400 uppercase tracking-wider"
        >
           City 
        </span>
        <span
          class="text-sm font-medium text-gray-900 dark:text-gray-100 text-right"
        >
          Ship City
        </span>
      </div>
      <div
        class="flex justify-between items-start gap-3 py-2"
      >
        <span
          class="text-xs font-medium text-gray-600 dark:text-gray-400 uppercase tracking-wider"
        >
           Zip Code 
        </span>
        <span
          class="text-sm font-medium text-gray-900 dark:text-gray-100 text-right"
        >
          67890
        </span>
      </div>
      <div
        class="mt-4 pt-4 border-t border-gray-200 dark:border-slate-800"
      >
        <span
          class="text-xs font-medium text-gray-600 dark:text-gray-400 uppercase tracking-wider mb-2 block"
        >
           Note 
        </span>
        <p
          class="text-sm text-gray-900 dark:text-gray-100 leading-relaxed m-0 p-3 bg-gray-50 dark:bg-slate-800 rounded-md border border-gray-200 dark:border-slate-700"
        >
           Leave at door 
        </p>
      </div>
      <!--container-->
    </div>
    <div
      class="bg-white dark:bg-slate-900 border border-gray-200 dark:border-slate-800 rounded-md p-4"
    >
      <div
        class="flex justify-between items-start gap-3 py-2 border-b border-gray-100 dark:border-slate-800"
      >
        <span
          class="text-xs font-medium text-gray-600 dark:text-gray-400 uppercase tracking-wider"
        >
           Street 
        </span>
        <span
          class="text-sm font-medium text-gray-900 dark:text-gray-100 text-right"
        >
          789 Delivery Rd
        </span>
      </div>
      <div
        class="flex justify-between items-start gap-3 py-2 border-b border-gray-100 dark:border-slate-800"
      >
        <span
          class="text-xs font-medium text-gray-600 dark:text-gray-400 uppercase tracking-wider"
        >
           City 
        </span>
        <span
          class="text-sm font-medium text-gray-900 dark:text-gray-100 text-right"
        >
          Deliver Town
        </span>
      </div>
      <div
        class="flex justify-between items-start gap-3 py-2"
      >
        <span
          class="text-xs font-medium text-gray-600 dark:text-gray-400 uppercase tracking-wider"
        >
           Zip Code 
        </span>
        <span
          class="text-sm font-medium text-gray-900 dark:text-gray-100 text-right"
        >
          54321
        </span>
      </div>
      <!--container-->
    </div>
    <!--container-->
  </div>
</div>
`;
